--- a/[Web]Standard - Web Standard/css/style.css
+++ b/[Web]Standard - Web Standard/css/style.css
@@ -852,9 +852,28 @@
     margin-top: 15px;
 }
 
-
 /* Layer Popup */
-#layer {display: none; position: fixed; left: 50px; top: 50px; width: 700px; border: 10px solid #dceff7; box-shadow: 3px 3px 10px rgba(0,0,0,0.4);}
-#layer img {width: 100%; display: block;}
-#layer .close { position: absolute; right: 20px; top: 20px; background-color:#2c94c4; padding: 5px 10px; color: #fff;}
-#layer .close:hover {text-decoration: underline;}
+#layer {
+    display: none;
+    position: fixed;
+    left: 50px;
+    top: 50px;
+    width: 700px;
+    border: 10px solid #dceff7;
+    box-shadow: 3px 3px 10px rgba(0,0,0,0.4);
+}
+#layer img {
+    width: 100%;
+    display: block;
+}
+#layer .close {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    background-color: #2c94c4;
+    padding: 5px 10px;
+    color: #fff;
+}
+#layer .close:hover {
+    text-decoration: underline;
+}
